[WFCORE-6556] Fixing JDK11 illegal access warnings in Elytron tests